# SurroundPlayer-3D

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  HaasProcessor.cpp  HaasProcessor.h  native-lib.cpp
app/src/main/java/com/example/musicplayer/: AlbumArtExtractor.kt  FileExplorerFragment.kt  MainActivity.kt  Music.kt  MusicService.kt  NowPlayingFragment.kt  PlaylistFragment.kt  SettingsFragment.kt  ViewPageAdapter.kt
app/src/main/java/com/sonicsphere/audio/: AlbumArtExtractor.kt  FileExplorerFragment.kt  HaasEffect.kt  MainActivity.kt  Music.kt  MusicService.kt  NowPlayingFragment.kt  SettingsFragment.kt  ViewPageAdapter.kt
app/src/main/java/com/sonicsphere/audio/effects/: HaasEffect.kt
app/src/main/res/drawable/: ic_favorite.xml  ic_favorite_filled.xml  ic_file.xml  ic_folder.xml  ic_music_note.xml  ic_repeat.xml  ic_repeat_all.xml  ic_repeat_one.xml  ic_shuffle.xml  ic_shuffle_on.xml  ic_skip_next.xml  ic_skip_previous.xml  ic_stop.xml  round_background_green.xml
app/src/main/res/layout/: activity_main.xml  fragment_now_playing.xml  fragment_playlist.xml  fragment_settings.xml  item_equalizer_band.xml  item_file.xml  item_music.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
